# solang-aqd

./: .gitignore  CODEOWNERS  Cargo.toml  MAINTAINERS.md  README.md
.github/: settings.yml
.github/workflows/: test.yml
crates/aqd-core/: Cargo.toml
crates/aqd-core/src/: cli.rs  main.rs
crates/aqd-polkadot/: Cargo.toml
crates/aqd-polkadot/src/: lib.rs  polkadot_action.rs
crates/aqd-polkadot/src/commands/: call.rs  instantiate.rs  mod.rs  remove.rs  upload.rs
crates/aqd-solana/: Cargo.toml
crates/aqd-solana-contracts/: Cargo.toml  README.md
crates/aqd-solana-contracts/examples/: flipper_call.rs
crates/aqd-solana-contracts/examples/contracts/: flipper.json
crates/aqd-solana-contracts/src/: borsh_encoding.rs  lib.rs  printing_utils.rs  solana_deploy.rs  solana_transaction.rs  utils.rs
crates/aqd-solana-contracts/tests/: test_address.rs  test_arrays.rs  test_defined_types.rs  test_flipper.rs  test_int.rs
crates/aqd-solana-contracts/tests/contracts/: AddressTest.json  DefinedTypes.json  VectorTest.json  address.sol  array.json  array.sol  byte_test.json  bytes.sol  defined_types.sol  signed_int.json  signed_int.sol  unsigned_int.json  unsigned_int.sol  vector.sol
crates/aqd-solana/src/: lib.rs  solana_action.rs
crates/aqd-solana/src/commands/: call.rs  deploy.rs  mod.rs  show.rs
crates/aqd-utils/: Cargo.toml
crates/aqd-utils/solang_config_examples/: polkadot_config.toml  solana_config.toml
crates/aqd-utils/src/: lib.rs  printing_macros.rs  utils.rs
integration/polkadot/: flipper.contract  flipper.wasm  incrementer.contract  incrementer.wasm  polkadot_cli.sh
integration/solana/: setup_solana.sh  solana_cli.sh
