[package]
name = "aqd"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
tokio = "1.33.0"

aqd-polkadot = { path = "../aqd-polkadot", optional = true }
aqd-solana = { path = "../aqd-solana", optional = true }


[features]
default = ["polkadot", "solana"]
polkadot = ["aqd-polkadot"]
solana = ["aqd-solana"]
