[package]
name = "aqd-polkadot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
serde_json = "1.0.107"
clap = { version = "4.4.6", features = ["derive"] }
url = { version = "2.4.1", features = ["serde"] }
colored = "2.0.4"
hex = "0.4.3"
serde = "1.0.189"

sp-core = "22.0.0"
subxt = "0.32.1"
contract-extrinsics = { git = "https://github.com/paritytech/cargo-contract", rev = "dfdc768bc430ba6e2967a482cb3016dba3785726" }
contract-build = { git = "https://github.com/paritytech/cargo-contract", rev = "dfdc768bc430ba6e2967a482cb3016dba3785726" }
aqd-utils = { path = "../aqd-utils" }
