[package]
name = "aqd-solana"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
anyhow = "1.0.75"
serde_json = "1.0.107"

solana-cli-config = "1.17.2"
solana-clap-v3-utils = "1.17.2"

aqd-solana-contracts = { path = "../aqd-solana-contracts" }
aqd-utils = { path = "../aqd-utils" }
